Replace JDK11-deprecated calls