@@ -72,9 +72,9 @@ public abstract class BridgeServiceManager {
         Bridge b = null;
         Locale loc = Locale.getDefault();
         if (bridgeType.equalsIgnoreCase(Bridge.JMS_TYPE)) {
-            b = (Bridge) Class.forName("com.sun.messaging.bridge.service.jms.BridgeImpl").newInstance();
+            b = (Bridge) Class.forName("com.sun.messaging.bridge.service.jms.BridgeImpl").getDeclaredConstructor().newInstance();
         } else if (bridgeType.toUpperCase(loc).equals(Bridge.STOMP_TYPE)) {
-            b = (Bridge) Class.forName("com.sun.messaging.bridge.service.stomp.StompBridge").newInstance();
+            b = (Bridge) Class.forName("com.sun.messaging.bridge.service.stomp.StompBridge").getDeclaredConstructor().newInstance();
         } else {
             throw new IllegalArgumentException("Invalid bridge type: " + bridgeType);
         }
