@@ -22,6 +22,7 @@ package com.sun.messaging.jmq.admin.apps.console;
 
 import java.awt.Dimension;
 import java.awt.CardLayout;
+import java.lang.reflect.InvocationTargetException;
 import java.util.Hashtable;
 import javax.swing.JPanel;
 import javax.swing.JScrollPane;
@@ -160,7 +161,7 @@ public class AInspector extends JScrollPane {
         InspectorPanel ip = null;
 
         try {
-            ip = (InspectorPanel) Class.forName(panelClassName).newInstance();
+            ip = (InspectorPanel) Class.forName(panelClassName).getDeclaredConstructor().newInstance();
             /*
              * System.err.println("Class: " + panelClassName + " instantiated !!");
              */
@@ -170,6 +171,10 @@ public class AInspector extends JScrollPane {
             System.err.println("Failed to intantiate inspector panel : " + ie);
         } catch (IllegalAccessException iae) {
             System.err.println("Illegal Access Exception while trying to intantiate inspector panel : " + iae);
+        } catch (NoSuchMethodException nsme) {
+            System.err.println(nsme);
+        } catch (InvocationTargetException ite) {
+            System.err.println(ite);
         }
 
         if (ip == null) {
